force-app/main/default/objects/RafShareContent__c/RafShareContent__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Refer-a-Friend (Portal/App)
Dynamic Content for various marketing channels</description>
    <label>RafShareContent</label>
</CustomObject>