force-app/main/default/objects/RafShareContent__c/fields/ClipboardContent__c.field-meta.xml
<CustomField>
    <fullName>ClipboardContent__c</fullName>
    <label>ClipboardContent</label>
    <type>TextArea</type>
</CustomField>