force-app/main/default/objects/RafShareContent__c/fields/FBContent__c.field-meta.xml
<CustomField>
    <fullName>FBContent__c</fullName>
    <label>FBContent</label>
    <type>TextArea</type>
</CustomField>