force-app/main/default/objects/RafShareContent__c/fields/MessengerContent__c.field-meta.xml
<CustomField>
    <fullName>MessengerContent__c</fullName>
    <label>MessengerContent</label>
    <type>TextArea</type>
</CustomField>