force-app/main/default/objects/RafShareContent__c/fields/TwitterContent__c.field-meta.xml
<CustomField>
    <fullName>TwitterContent__c</fullName>
    <label>TwitterContent</label>
    <type>TextArea</type>
</CustomField>