force-app/main/default/objects/RafShareContent__c/fields/WhatsappContent__c.field-meta.xml
<CustomField>
    <fullName>WhatsappContent__c</fullName>
    <label>WhatsappContent</label>
    <type>TextArea</type>
</CustomField>